# bogo_sort_benchmark

./: Cargo.toml  LICENSE  README.md
src/: main.rs
