[package]
name = "bogo_sort_benchmark"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
fastrand = "2.4.1"
indicatif = { version = "0.18.4", features = ["rayon"] }
rand = "0.10.1"
rayon = "1.12.0"
tokio = { version = "1.51.1", features = ["full"] }
